gcc/testsuite/g++.old-deja/g++.jason/ref6.C
// { dg-do assemble  }
const int &f();
int &a = f();			// { dg-error "" } 
